--- a/VRChat/59/1325059.html
+++ b/VRChat/59/1325059.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mWaQMjGVg9nHxoMs4Tbx6D0Ok8L+j7zmCyCqNOzde2Y="></script>
+    "86EwYwmvMYA9G7o8bLJqg0mLeueCJaX79X4HYNI8REs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホロ恋子 ローポリゴンモデル(1,996ポリゴン) UnityPackage同梱","description":"ブログサイトで作成手順を紹介したフルスクラッチモデルです。\n作成の過程を以下のブログサイトで公開しています。\nhttp://bluebirdofoz.hatenablog.com/entry/2018/11/28/095308\n\nHoloLensや携帯端末などリソースの限られた環境での利用を想定しており、軽量なモデルです。\nHMDアクセサリを含めたポリゴン数は 1,996 となっています。\n\nオリジナルデータ追加セットは FBXファイル + UnityPackage ファイルに加えて、編集データである .Blend ファイルと .clip ファイルを含めています。\n\n● モデル情報\n 三角面数：1,996\n テクスチャ：2048x2048(1枚)\n オブジェクト分割無し\n （ライティングを行わない環境での利用を想定し、テクスチャに影を描き込み済み）\n\n● 基本セットに含まれるもの\nHoloLenko_2000poly\n├FBXPackage\n│├HoloLenKo_2000poly_Texture.png  … テクスチャ画像\n│└HoloLenko_2000poly.fbx          … FBX形式モデルデータ\n└UnityPackage\n  └HoloLenKo_2000poly.unitypackage … Unity用インポートパッケージ\n\n● オリジナルデータ追加セットに含まれるもの\nHoloLenko_2000poly_Original\n├Sitae\n│└正面遠_頭身変更_三面図_グリッドなし.png … Blender用下絵画像\n├Texture\n│├HoloLenKo_2000poly_Texture.png  … テクスチャ画像\n│└HoloLenKo_2000poly_Texture.clip … テクスチャ画像の元データ\n└HoloLenko_2000poly.blend … Blenderプロジェクトファイル\n\n(オリジナルデータ追加セットに含まれる HoloLenKo_2000poly_Texture.clip を開くには別途 CLIP STUDIO PAINT が必要です)","url":"https://booth.pm/ja/items/1325059","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/59890598-c650-4863-9902-c23f3de9a5cd/i/1325059/6527377f-3f8c-4a58-86d7-6a41ca62a3a5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mWaQMjGVg9nHxoMs4Tbx6D0Ok8L+j7zmCyCqNOzde2Y="></script>
+    nonce="86EwYwmvMYA9G7o8bLJqg0mLeueCJaX79X4HYNI8REs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1325059/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1325059/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
