--- a/VRChat/20/1324220.html
+++ b/VRChat/20/1324220.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "n4dPic0kYm7SmZbo3DK/o9ts+H+cw1nNART61bu1c0M="></script>
+    "KoTXkSUw4g/QrJNazQ2+pbAx8dCcc72qmft7QF8K/l0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ペンダント　10種類セット","description":"・ペンダント 10種類セット\n\n注 ネックレスチェーンはついていません。\n・セット内容\n　README\n　ペンダント No,1～No,10 （unity package）\n　各ペンダントの画像（JPG）\n\nunity packageをそのまま入れてもらえればいけるはずです。\nshaderはスタンダードと、うにショップ様のCrystal Shaderを使用しています。\n少ないもので△270、多いもので△1176あります。","url":"https://booth.pm/ja/items/1324220","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b192de80-ab9a-405c-a8c2-559c78ffe3e6/i/1324220/fa6db6ff-21e5-4a44-a42d-a15e96839218_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n4dPic0kYm7SmZbo3DK/o9ts+H+cw1nNART61bu1c0M="></script>
+    nonce="KoTXkSUw4g/QrJNazQ2+pbAx8dCcc72qmft7QF8K/l0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1324220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1324220/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               129
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
