--- a/VRChat/38/1323938.html
+++ b/VRChat/38/1323938.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HtqXds/zqFwXHfp18TSK93SmGriUUiVIhkGXH9su3XQ="></script>
+    "UGRq95r5Pr7I3xC9vQQgioJEMOB/w2LPnoJ4MQW8Vjo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハートのアクセサリ","description":"ポリゴン数 1514、pngファイルひとつ、fbxファイルひとつです。","url":"https://booth.pm/ja/items/1323938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/f6c0bf4f-f3a1-4866-a041-ecebc9bdf610/i/1323938/9fd8d1cc-614c-4c1d-83b9-08ca48beac1f_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HtqXds/zqFwXHfp18TSK93SmGriUUiVIhkGXH9su3XQ="></script>
+    nonce="UGRq95r5Pr7I3xC9vQQgioJEMOB/w2LPnoJ4MQW8Vjo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1323938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1323938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
