--- a/VRChat/74/999974.html
+++ b/VRChat/74/999974.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KwQCN5zO845HPwM9al4ZdKpnRixLYIjLbR4nfxh7Nus="></script>
+    "8KA1G6lv1Aiu/DraivfbwT7Wi0jMKU5eiyBqR8Yiq0g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"古びた魔法書 Old magic books","description":"　「古びた魔法書」\n\n３種類の本のセットです\nひらく、ページめくりのシェイプキー付き\n\nVRChat想定のprefab設定済みunitypackage入り\n\nおまけで、魔法陣のPNG画像も入っています。\n魔法のパーティクルなどで使っていただいて構いません。\nその他、服やアイテム等の柄としても使用していただいてOKです。\n\n\n\nポリゴン数：1冊あたり228ポリゴン\n\n\nシェーダーはUnlitWFを設定しています。\nUnlit_WF_ShaderSuite Download\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite/releases\n\n他のシェーダーを使用する場合、アルファ（透明部分）があるので「Cutout」に設定してください。\n\n\n\n＜アップデート＞\n2020. 4.15　1冊ごとprefabを用意してunitypackageを追加。シェーダーをUnlitWFに変更しました。\n2019. 2.24　テクスチャサイズを変えず、表紙2種類と2ページ追加、シェイプキーの追加をしました。\n\n2018. 9. 6 　少しだけですがテクスチャを修正しました。","url":"https://booth.pm/ja/items/999974","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/999974/14b70dbc-2eda-4592-931c-2fb7ee55dfb9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KwQCN5zO845HPwM9al4ZdKpnRixLYIjLbR4nfxh7Nus="></script>
+    nonce="8KA1G6lv1Aiu/DraivfbwT7Wi0jMKU5eiyBqR8Yiq0g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,10 +165,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/999974/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              726
+                              728
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/999974/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              726
+                              728
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
